--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -371,7 +371,7 @@
                                             <td class="col-2">{{ dt.name }}</td>
                                             <td class="col-2">{{ dt.username }}</td>
                                             <td>{{ dt.email }}</td>
-                                            <td>{{ dt.tlp }}</td>
+                                            <td>{{ dt.nomor }}</td>
                                             <td class="col-2">
                                                 <select name="role" class="form-select" onchange="changeRole('{{ dt._id }}', this.value)">
                                                     <option value="1" {% if dt.role == '1' %}selected{% endif %}>Admin</option>
