--- a/templates/layanan.html
+++ b/templates/layanan.html
@@ -129,6 +129,7 @@ endblock %} {% block header %}
             >Pesan Sekarang</a
           >
         </div>
+        </div>
         {% endfor %}
       </div>
     </div>
