--- a/templates/main.html
+++ b/templates/main.html
@@ -169,14 +169,25 @@
         id="navbar"
         class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand d-flex align-items-center" href="#">
+          <a class="navbar-brand d-flex align-items-center" href="/">
+            {% if profile.logo %}
             <img
-              src="{{ url_for('static', filename='img/asset/logo.png') }}"
               alt="Logo"
               width="50"
               height="50"
-              class="me-2" />
-            <span class="fw-bold text-custom">Forty Seven Laundry</span>
+              class="me-2"
+              src="{{ url_for('static', filename='img/logo/' + profile.logo) }}" />
+            {% else %}
+            <img
+              alt="Logo"
+              width="50"
+              height="50"
+              class="me-2"
+              src="{{ url_for('static', filename='img/undraw_profile.svg') }}" />
+            {% endif %}
+            <span class="fw-bold text-custom"
+              >{{ profile.namaPerusahaan }}</span
+            >
           </a>
 
           <button
@@ -327,7 +338,7 @@
               {% if contact %}
               <p>{{ profile.namaPerusahaan | upper }}</p>
               <p>Alamat: {{ contact.alamat }}</p>
-              <p>Telepon: {{ contact.nomor }}</p>
+              <p>Telepon: {{ contact.nomor | format_phone }}</p>
               <p>Email: {{ contact.email }}</p>
               {% else %}
               <p>Tidak ada data</p>
