--- a/templates/main_admin.html
+++ b/templates/main_admin.html
@@ -94,12 +94,21 @@
           class="sidebar-brand d-flex align-items-center justify-content-center"
           href="/">
           <div class="sidebar-brand-icon">
+            {% if profile.logo %}
             <img
-              src="{{ url_for('static', filename='img/logo.png') }}"
-              alt="Logo"
-              width="50" />
+              class="img-fluid"
+              width="50"
+              src="{{ url_for('static', filename='img/logo/' + profile.logo) }}" />
+            {% else %}
+            <img
+              class="img-fluid"
+              width="50"
+              src="{{ url_for('static', filename='img/undraw_profile.svg') }}" />
+            {% endif %}
           </div>
-          <div class="sidebar-brand-text mx-3 col">Forty Seven</div>
+          <div class="sidebar-brand-text mx-3 col">
+            {{ profile.namaPerusahaan | limit_taxt(2) }}
+          </div>
         </a>
 
         <!-- Divider -->
